[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/item/consumable/health_potion.png" type="Texture" id=1]
[ext_resource path="res://assets/font/thaleah_fat.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/interface/buy_container/item_container.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=4]
size = 10
font_data = ExtResource( 2 )

[node name="Container" type="HBoxContainer"]
margin_right = 94.0
margin_bottom = 32.0
script = ExtResource( 3 )

[node name="ItemTexture" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 1 )

[node name="VContainer" type="VBoxContainer" parent="."]
margin_left = 36.0
margin_right = 94.0
margin_bottom = 32.0
custom_constants/separation = 0

[node name="Margin" type="Control" parent="VContainer"]
margin_right = 58.0
margin_bottom = 8.0
rect_min_size = Vector2( 0, 8 )

[node name="ItemName" type="Label" parent="VContainer"]
margin_top = 8.0
margin_right = 58.0
margin_bottom = 18.0
rect_min_size = Vector2( 49, 0 )
custom_fonts/font = SubResource( 4 )
text = "Health Potion"
valign = 1

[node name="ItemPrice" type="Label" parent="VContainer"]
margin_top = 18.0
margin_right = 58.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 4 )
text = "15 Gold Coins"
valign = 1
